# profile-intelligence-cli

./: .dockerignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
insighta_cli/: main.py
